# strykeforce.org

./: .envrc  .eslintrc.js  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  about.graphql  browserslist-stats.json  config.toml  flake.nix  gatsby-browser.js  gatsby-config.js  gatsby-node.js  gulpfile.babel.js  justfile  manage.py  netlify.toml  package-lock.json  package.json  prettier.config.js  pyproject.toml  setup.cfg  tailwind.config.js  tba.http  tslint.json  webpack.conf.js
.github/: dependabot.yml  main.workflow
.github/workflows/: build.yml
.netlify/: state.json
archetypes/: default.md
assets/: stryke_force_social.graffle
assets/about/: outreach.md
assets/blog/ranya-and-riley/: index.md
content/: _index.md  calendar.toml  ftc.toml  partners.csv  partners.toml  team.toml
content/about/: _about.md  _index.md  ftc.csv  ftc.md  history.md  nrg.md  outreach.md  students.csv  vex.md
content/about/frc/: index.md
content/about/outreach/: index.md
content/about/partners/: index.md
content/blog/: _index.md
content/blog/2018-05-01-detroit/: index.md
content/blog/2018-05-01-open-houses/: index.md
content/blog/2018-05-12-ranya-and-riley/: index.md
content/blog/2018-08-02-ftc/: index.md
content/contact/: _index.md
content/howto/: blog.md
content/open-house/: _index.md
content/resources/: _index.md  blog.md
data/: calendar.toml  frc.json  partners.json  team.toml
deploy/: configuration.nix  flake.nix  secrets.nix  strykeforce_s3_secrets.age  strykeforce_website_secrets.age
docs/: README.md
docs/amazon/: container.json  role-policy.json
layouts/: index.html
lib/: container.nix  manage.nix  module.nix  overrides-opencv.nix  overrides-pillow-heif.nix  overrides-strykeforce.nix  overrides-tba-api-v3client.nix  static.nix  tba.py
lib/lib/: default.nix
nix/: container.nix  devshell.nix  formatter.nix  module.nix
nix/checks/: pre-commit.nix  website-integration-tests.nix
nix/lib/: default.nix
script/: .config  bootstrap  clean  dump  server  update
site/: config.toml
site/archetypes/: default.md
site/layouts/: index.html
site/public/: 404.html  index.html  sitemap.xml
site/static/: hero_image.jpg.REMOVED.git-id
src/: index.d.ts
src/css/: main.css  main.sss
src/js/: _header.js  app.js
src/pages/: 404.tsx  about.js  about.tsx  blog.tsx  contact.tsx  index.js  index.tsx  resources.tsx
src/templates/: BlogTemplate.tsx
src/util/: media.js
static/: _redirects  robots.txt
static/deadeye/: bootstrap.sh
themes/strykeforce/: theme.toml
website/: manage.py  urls.py  wsgi.py
website/blog/: apps.py  models.py
website/events/: admin.py  models.py
website/home/: models.py
website/members/: factories.py  models.py
website/search/: views.py
website/settings/: base.py  dev.py  production.py  test.py
website/templates/: 404.html  base.html  manifest.webmanifest
(+403 files in other folders)
