[tool.poetry]
authors = ["Jeff Hutchison <jeff@j3ff.io>"]
description = "Stryke Force Website"
license = "MIT"
name = "stryke_force_website"
packages = [
  {include = "website"},
]
readme = "README.md"
version = "4.2.0"

[tool.poetry.group.main.dependencies]
Django = {extras = ["argon2"], version = "^5.1"}
python = "^3.10"
whitenoise = {extras = ["brotli"], version = "^6.7.0"}
wagtail = "^6.2"
factory-boy = "^3.3.1"
gunicorn = "^23.0.0"
tba-api-v3client = "^3.8.0"
hiredis = "^3.0.0"
sentry-sdk = "^2.14.0"
opencv-python = "^4.10"
psycopg  = {extras = ["c", "pool"], version = "^3.2"}
redis = "^5.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
rich = "^13.8.1"
django-debug-toolbar = "^4.4"
ipython = "^8.27.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 99
target-version = ['py310']

[tool.isort]
profile = "black"
