[project]
name = "website"
version = "4.6.1"
description = "Stryke Force Website"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django[argon2]>=5.1.4",
    "gunicorn>=23.0.0",
    "hiredis>=3.1.0",
    "opencv-python>=4.10.0.84",
    "psycopg[c,pool]>=3.2.3",
    "redis>=5.2.1",
    "sentry-sdk>=2.19.2",
    "tba-api-v3client>=3.8.0",
    "wagtail>=6.3.2",
    "whitenoise[brotli]>=6.8.2",
]

[project.scripts]
strykeforce-manage = "website.manage:main"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "django-debug-toolbar>=4.4.6",
    "django-types>=0.20.0",
    "ipython>=8.31.0",
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 99
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.djlint]
profile = "django"
max_blank_lines = 1
indent = 2

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
